--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.6",
     "sqlite3": "^5.0.2",
     "web3": "^1.7.0"
   }
